Layout bug fixes (#237)
* Change about-side's margin left to 10px

* Fix .lobby__table div

--- a/src/styles.css
+++ b/src/styles.css
@@ -1558,6 +1558,7 @@ g[stroke='#888'] {
 	border-radius: var(--borderRadius) !important;
 	border: 2px solid var(--surfaceColorHover);
 	padding: 40px 0 !important;
+	margin: 20px 0 0 0 !important;
 }
 
 .lobby__start {
@@ -5433,7 +5434,10 @@ body .glowing {
 		font-size: 1.2rem !important;
 	}
 
-	.about-side,
+	.about-side {
+		margin-left: 10px !important;
+	}
+	
 	.lobby__streams,
 	.lobby__about {
 		margin-left: 0 !important;
